--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Tocapu - A front end template</title>
-        <link rel="stylesheet" href="../vendor/cartodb.js/dist/cartodb.css">
+        <link rel="stylesheet" href="../vendor/leaflet/dist/leaflet.css">
         <link rel="stylesheet" href="../.tmp/styles/main.css">
     </head>
     <body>
