--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
         <title>Tocapu - A front end template</title>
+        <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="../vendor/leaflet/dist/leaflet.css">
         <link rel="stylesheet" href="../.tmp/styles/main.css">
+        <!-- endbuild -->
     </head>
     <body>
-        <div class="map" id="map"></div>
+
         <script src="../vendor/requirejs/require.js" data-main="scripts/main"></script>
     </body>
 </html>
