--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
         <title>Tocapu - A front end template</title>
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="../vendor/leaflet/dist/leaflet.css">
+        <link rel="stylesheet" href="../vendor/lungo/lungo.css">
+        <link rel="stylesheet" href="../vendor/lungo/lungo.icon.css">
+        <link rel="stylesheet" href="../vendor/lungo/lungo.theme.css">
         <link rel="stylesheet" href="../.tmp/styles/main.css">
         <!-- endbuild -->
     </head>
