--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,12 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
         <title>Tocapu - A front end template</title>
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="../vendor/lungo/lungo.css">
-        <link rel="stylesheet" href="../vendor/lungo/lungo.icon.css">
-        <link rel="stylesheet" href="../vendor/lungo/lungo.theme.css">
         <link rel="stylesheet" href="../.tmp/styles/main.css">
         <!-- endbuild -->
     </head>
     <body>
-
+        <!-- build:js scripts/main.js -->
         <script src="../vendor/requirejs/require.js" data-main="scripts/main"></script>
+        <!-- endbuild -->
     </body>
 </html>
